--- a/EventListenerJava/app/src/main/res/values/strings.xml
+++ b/EventListenerJava/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
     <string name="app_name">EventListenerJava</string>
-    <string name="editMessage">Enter a word</string>
+    <string name="editMessage">Enter a word!</string>
 </resources>
